templates/inspec/tests/unit/fixtures/firewall_fixture.json
{"kind":"compute#firewall",
 "id":"960238098441931407",
 "creationTimestamp":"2018-10-11T22:42:56.000-07:00",
 "name":"default-uuaca3r2wn7yqlbdyzue5lrn",
 "description":"description",
 "network":
  "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/networks/default",
 "priority":1000,
 "sourceRanges":
  ["103.104.152.0/22",
   "104.132.0.0/14",
   "113.197.104.0/22",
   "185.25.28.0/22",
   "193.200.222.0/24",
   "89.207.224.0/21"],
 "targetTags":["https-server"],
 "allowed":[{"IPProtocol":"tcp", "ports":["443"]}],
 "denied":[{"IPProtocol":"udp", "ports":["555"]}],
 "direction":"INGRESS",
 "disabled":false,
 "selfLink":
  "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/firewalls/default-uuaca3r2wn7yqlbdyzue5lrn"}
