templates/inspec/tests/unit/fixtures/firewalls_fixture.json
{"kind":"compute#firewallList",
 "id":"projects/sam-inspec/global/firewalls",
 "items":
  [{"kind":"compute#firewall",
    "id":"2182788659368790689",
    "creationTimestamp":"2018-10-11T22:42:38.647-07:00",
    "name":"default-2wnao3jebww7ldrn463stwke",
    "description":
      "Desc",
    "network":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/networks/default",
    "priority":1000,
    "sourceRanges":
     ["103.104.152.0/22",
      "104.132.0.0/14",
      "113.197.104.0/22",
      "185.25.28.0/22",
      "193.200.222.0/24",
      "89.207.224.0/21"],
    "allowed":[{"IPProtocol":"tcp", "ports":["22", "3389"]}],
    "direction":"INGRESS",
    "disabled":false,
    "selfLink":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/firewalls/default-2wnao3jebww7ldrn463stwke"},
   {"kind":"compute#firewall",
    "id":"8832388878237010597",
    "creationTimestamp":"2018-10-11T22:42:34.846-07:00",
    "name":"default-7mzjmae3tlidh4yoidvnpe53",
    "description":
     "Description 2",
    "network":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/networks/default",
    "priority":1000,
    "sourceRanges":
     ["108.170.224.0/19",
      "108.177.8.0/21",
      "108.177.80.0/20",
      "108.177.96.0/19",
      "172.102.8.0/21",
      "172.217.0.0/19",
      "172.217.128.0/19",
      "172.217.160.0/20",
      "172.217.176.1/32",
      "172.217.176.2/32",
      "172.217.192.0/19",
      "172.217.64.0/18",
      "172.253.50.0/23",
      "172.253.64.0/20",
      "173.194.0.0/16",
      "185.150.148.0/22",
      "192.104.160.0/23",
      "209.107.176.0/20",
      "209.85.128.0/17",
      "216.239.32.0/19",
      "216.252.220.0/22",
      "216.58.192.0/19",
      "64.233.160.0/19",
      "66.102.0.0/20",
      "66.249.64.0/19",
      "72.14.192.0/18",
      "74.125.0.0/16",
      "8.8.4.0/24",
      "8.8.8.0/24"],
    "targetTags":["https-server"],
    "allowed":[{"IPProtocol":"tcp", "ports":["443"]}],
    "direction":"INGRESS",
    "disabled":false,
    "selfLink":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/firewalls/default-7mzjmae3tlidh4yoidvnpe53"},
   {"kind":"compute#firewall",
    "id":"8107033807488387752",
    "creationTimestamp":"2018-10-11T22:42:31.919-07:00",
    "name":"default-knsku4qwwbtr3bhcf3y6vcmu",
    "description":
     "Another description",
    "network":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/networks/default",
    "priority":1000,
    "sourceRanges":["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"],
    "allowed":[{"IPProtocol":"tcp"}, {"IPProtocol":"udp"}],
    "direction":"INGRESS",
    "disabled":false,
    "selfLink":
     "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/firewalls/default-knsku4qwwbtr3bhcf3y6vcmu"}
   ],

 "selfLink":
  "https://www.googleapis.com/compute/v1/projects/sam-inspec/global/firewalls"}
